Don't crash when account goes offline while we are loading history

Also clean up coding style in the file a bit.

BUG: 313927
REVIEW: 108607
FIXED-IN: 0.5.3